# MLOps_projectrepo

./: .cursorrules  .dockerignore  .dvcignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLI_VERIFICATION.md  CLOUD_TRAINING.md  Dockerfile  GCP_TRAINING.md  PLATFORM_FIX_SUMMARY.md  QUICKSTART_GCP.md  README.md  REORGANIZATION_PROPOSAL.md  REORGANIZATION_SUMMARY.md  build_docker.sh  cloudbuild.yaml  config_guide.md  curl_arxiv-scientific-research-papers-dataset  data.dvc  profiling_guide.md  pyproject.toml  tasks.py  test_summary.json  trained_model.pkl  trained_model.pt  vertex_ai_config_fast.yaml  vertex_ai_config_fast_cpu.yaml  vertex_ai_config_gpu.yaml  vertex_ai_config_template.yaml  vertex_ai_train.yaml  vertex_ai_train_fast.yaml  vertex_ai_train_fast_cpu.yaml  wandb_launch.yaml  wandb_launch_gcp.yaml
.devcontainer/: devcontainer.json
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: cml_data.yaml  cml_model_registry.yaml  deploy-api.yaml  deploy-monitoring.yaml  tests.yaml
app/: main.py
ci/: cloudbuild-api.yaml  cloudbuild-monitoring.yaml  cloudbuild.yaml
configs/: config.yaml  config_tfidf.yaml  model_conf.yaml  model_tfidf.yaml  sweep.yaml  training_conf.yaml  training_conf_tfidf.yaml
configs/experiment/: 2hour.yaml  balanced.yaml  exp1.yaml  exp2.yaml  fast.yaml  null.yaml  optimized_distilbert.yaml  sweep_config.yaml  tfidf_xgboost.yaml
configs/experiments/: exp1.yaml  exp2.yaml
configs/gcp/: artifact-cleanup-policy.json
configs/vertex_ai/: config.yaml  gcp_workflow_spec.yaml  vertex_ai_config_2hour.yaml  vertex_ai_config_balanced_cpu.yaml  vertex_ai_config_cpu.yaml  vertex_ai_config_fast.yaml  vertex_ai_config_fast_cpu.yaml  vertex_ai_config_optimized.yaml  vertex_ai_config_tfidf.yaml  vertex_ai_train_balanced_cpu.yaml  vertex_ai_train_fast.yaml  vertex_ai_train_fast_cpu.yaml
data/processed/: category_mapping.json.dvc  test_labels.pt.dvc  test_texts.json.dvc  train_labels.pt.dvc  train_texts.json.dvc  val_labels.pt.dvc  val_texts.json.dvc
data/raw/: .gitignore  arXiv_scientific dataset.csv.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile  train_tfidf.dockerfile
docs/: DOWNLOAD_MODEL.md  INVOKE_COMMANDS.md  LOGGING_GUIDE.md  MODEL_USAGE_GUIDE.md  PRE_FLIGHT_CHECKLIST.md  VERTEX_AI_TRAINING_GUIDE.md  mkdocs.yaml  profiling_guide.md
docs/source/: index.md
models/: model.pth
monitoring/: __init__.py  collect_current_data.py  drift_monitor.py  drift_robustness.py  log_schema.json  schema.json
monitoring_service/: Dockerfile  README.md
monitoring_service/app/: __init__.py  main.py
outputs/2026-01-14/10-24-45/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-14/10-25-48/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.py
scripts/: build_docker.sh  diagnose_platform.sh  download_model_from_wandb.py  gcp_train.sh  preflight_check.sh  push_all_images.sh  validate_deploy_api.sh
src/pname/: api.py  data.py  data_stats.py  evaluate.py  metrics.py  model.py  model_tfidf.py  profiler.py  train.py  train_tfidf.py  visualize.py  visualize_features.py
tests/: conftest.py  test_api.py  test_backward_compat.py  test_data.py  test_model.py  test_model_forward.py  test_tfidf_pipeline.py  test_tfidf_standalone.py  test_train_tfidf_pipeline.py  test_training.py  verify_code_changes.py
tests/integrationtests/: test_apis.py
tests/monitoring/: test_drift.py
tests/performancetests/: __init__.py  locustfile.py
